// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`freeform editor snapshots renders 1`] = `
<div>
  <div>
    <div
      class="css-14ptknt"
    >
      <div
        class="css-1xzm96i"
        style="width: 466px; min-height: 100px; max-height: 40vh;"
      />
      <div
        class="css-2z6ef6"
      />
    </div>
    <div
      compname="InputContainer"
    >
      Comment
    </div>
    <div
      annotations=""
      data-testid="annotation-menu"
    />
    <div
      data-testid="freeform-editor"
      offset="0"
      value=""
    />
  </div>
</div>
`;

exports[`freeform editor snapshots renders disabled 1`] = `
<div>
  <div>
    <div
      class="css-14ptknt"
    >
      <div
        class="css-1xzm96i"
        style="width: 466px; min-height: 100px; max-height: 40vh;"
      />
      <div
        class="css-2z6ef6"
      />
    </div>
    <div
      compname="InputContainer"
    >
      Comment
    </div>
    <div
      annotations=""
      data-testid="annotation-menu"
    />
    <div
      data-testid="freeform-editor"
      offset="0"
      value=""
    />
  </div>
</div>
`;

exports[`freeform editor snapshots renders with complex text and nested annotations 1`] = `
<div>
  <div>
    <div
      class="css-14ptknt"
    >
      <div
        class="css-1xzm96i"
        style="width: 466px; min-height: 100px; max-height: 40vh;"
      >
        <div>
          This is 
          <b>
            a complex 
          </b>
          <em>
            example
          </em>
          <br />
          This is a new line.
        </div>
      </div>
      <div
        class="css-2z6ef6"
      />
    </div>
    <div
      compname="InputContainer"
    >
      Comment
    </div>
    <div
      annotations=""
      data-testid="annotation-menu"
    />
    <div
      data-testid="freeform-editor"
      offset="0"
      value=""
    />
  </div>
</div>
`;

exports[`freeform editor snapshots renders with predefined annotations 1`] = `
<div>
  <div>
    <div
      class="css-14ptknt"
    >
      <div
        class="css-1xzm96i"
        style="width: 466px; min-height: 100px; max-height: 40vh;"
      />
      <div
        class="css-2z6ef6"
      />
    </div>
    <div
      compname="InputContainer"
    >
      Comment
    </div>
    <div
      annotations="[object Object],[object Object],[object Object],[object Object]"
      data-testid="annotation-menu"
    />
    <div
      data-testid="freeform-editor"
      offset="0"
      value=""
    />
  </div>
</div>
`;

exports[`freeform editor snapshots renders with text and annotations 1`] = `
<div>
  <div>
    <div
      class="css-14ptknt"
    >
      <div
        class="css-1xzm96i"
        style="width: 466px; min-height: 100px; max-height: 40vh;"
      >
        <div>
          This is an example.
        </div>
      </div>
      <div
        class="css-2z6ef6"
      />
    </div>
    <div
      compname="InputContainer"
    >
      Comment
    </div>
    <div
      annotations=""
      data-testid="annotation-menu"
    />
    <div
      data-testid="freeform-editor"
      offset="0"
      value=""
    />
  </div>
</div>
`;

exports[`freeform editor snapshots renders with text and comment 1`] = `
<div>
  <div>
    <div
      class="css-14ptknt"
    >
      <div
        class="css-1xzm96i"
        style="width: 466px; min-height: 100px; max-height: 40vh;"
      >
        <div>
          This is an example.
        </div>
      </div>
      <div
        class="css-2z6ef6"
      />
    </div>
    <div
      compname="InputContainer"
    >
      Comment
    </div>
    <div
      annotations=""
      data-testid="annotation-menu"
    />
    <div
      data-testid="freeform-editor"
      offset="0"
      value=""
    />
  </div>
</div>
`;
